Changes to be committed:

--- a/designs/pages/appPages.json
+++ b/designs/pages/appPages.json
@@ -3,5 +3,15 @@
         "appPageName": "home",
         "componentName": "homeComponent",
         "isEntry": false
+    },
+    "f43ec4c7-3496-a36b-da88-c166b67ff254": {
+        "appPageName": "carousel",
+        "componentName": "carouselComponent",
+        "isEntry": false
+    },
+    "0d99180c-6005-1f92-4d18-9c60c99211e7": {
+        "appPageName": "login",
+        "componentName": "loginComponent",
+        "isEntry": false
     }
 }
